# Spider-Solitaire-Demo

./: CMakeLists.txt  main.c  spider.h  ui.h
